update lat/long -> loc

--- a/app/components/rental/detailed.hbs
+++ b/app/components/rental/detailed.hbs
@@ -37,8 +37,7 @@
   </div>
 
   <Map
-    @lat={{@rental.location.lat}}
-    @lng={{@rental.location.lng}}
+    @loc={{@rental.location}}
     @zoom="12"
     @width="894"
     @height="600"
