--- a/app/components/rental.hbs
+++ b/app/components/rental.hbs
@@ -23,8 +23,7 @@
         </div>
     </div>
     <Map
-        @lat={{@rental.location.lat}}
-        @lng={{@rental.location.lng}}
+        @loc={{@rental.location}}
         @zoom="9"
         @width="150"
         @height="150"
