--- a/app/components/nav-bar.hbs
+++ b/app/components/nav-bar.hbs
@@ -9,5 +9,8 @@
     <LinkTo @route="contact" class="menu-contact">
       Contact
     </LinkTo>
+    <LinkTo @route="rentalform" class="menu-form">
+      New Listing
+    </LinkTo>
   </div>
 </nav>
