Various cleanup and testing

--- a/app/components/nav-bar.hbs
+++ b/app/components/nav-bar.hbs
@@ -10,7 +10,7 @@
       Contact
     </LinkTo>
     <LinkTo @route="rentalform" class="menu-form">
-      New Listing
+      New
     </LinkTo>
   </div>
 </nav>
