--- a/app/components/map.hbs
+++ b/app/components/map.hbs
@@ -1,6 +1,6 @@
 <div class="map">
   <img
-    alt="Map image at coordinates {{@lat}},{{@lng}}"
+    alt="Map image at coordinates {{@loc}}"
     ...attributes
     src={{this.src}}
     width={{@width}} height={{@height}}
