--- a/app/components/rental.hbs
+++ b/app/components/rental.hbs
@@ -21,6 +21,7 @@
         <div class="detail bedrooms">
         <span>Number of bedrooms:</span> {{@rental.bedrooms}}
         </div>
+        <LinkTo @route="editrental" @model={{@rental.id}}>EDIT</LinkTo>
     </div>
     <Map
         @loc={{@rental.location}}
